backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ahmad
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 3002
      targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ahmad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/ahmad-jaber20/my-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
