frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ahmad
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 3010
      targetPort: 3010
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ahmad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/ahmad-jaber20/my-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
