vault.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ahmad-vault
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: ahmad-vault
spec:
  type: NodePort
  selector:
    app: vault
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      nodePort: 30555
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: ahmad-vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.16
          imagePullPolicy: IfNotPresent
          args:
            - "server"
            - "-config=/etc/vault.d/vault.hcl"
          ports:
            - containerPort: 8200
              name: http
          securityContext:
            capabilities:
              add: ["IPC_LOCK"]
          volumeMounts:
            # Mount a single file using subPath (no ..data symlink dir)
            - name: vault-config
              mountPath: /etc/vault.d/vault.hcl
              subPath: vault.hcl
              readOnly: true
            - name: vault-file
              mountPath: /vault/file
      volumes:
        - name: vault-config
          configMap:
            name: vault-config
        - name: vault-file
          emptyDir: {}
