ahmad-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: ahmad
  annotations:
    cert-manager.io/cluster-issuer: zyoud-letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - devops-2.sociumtech.com
      secretName: frontend-tls
  rules:
    - host: devops-2.sociumtech.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3010
